# USD

./: BUILDING.md  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  VERSIONS.md
build_scripts/: apple_utils.py  build_usd.py
cmake/defaults/: Options.cmake  Packages.cmake  ProjectDefaults.cmake  gccclangshareddefaults.cmake  msvcdefaults.cmake
cmake/macros/: Private.cmake  Public.cmake  copyHeaderForBuild.cmake  prepend_line.py
cmake/modules/: FindDawn.cmake  FindOpenEXR.cmake  FindOpenImageIO.cmake  FindOpenSubdiv.cmake  FindTint.cmake
extras/usd/js_bindings/: CMakeLists.txt
js/: README.md
pxr/base/arch/: assumptions.cpp  debugger.cpp  defines.h  errno.cpp  fileSystem.cpp  fileSystem.h  mallocHook.cpp  math.h  pragmas.h  stackTrace.cpp  symbols.cpp  systemInfo.cpp  timing.cpp  timing.h
pxr/base/gf/: CMakeLists.txt  emscriptenRegistrationHelper.h  vec2d.h  vec2f.h  vec2i.h  vec3d.h  vec3f.h  vec3i.h  vec4d.h  vec4f.h  vec4i.cpp  vec4i.h
pxr/base/tf/: CMakeLists.txt  anyWeakPtr.h  atomicRenameUtil.cpp  diagnostic.cpp  dl.cpp  emscriptenTypeRegistration.h  envSetting.cpp  envSetting.h  fileUtils.h  hash.h  mallocTag.cpp  pointerAndBits.h  preprocessorUtilsLite.h  pyObjWrapper.h  pyTracing.h  refPtr.h  registryManager.h  smallVector.cpp  stackTrace.h  weakPtrFacade.h
pxr/base/trace/: wrapCollector.cpp
pxr/base/ts/: CMakeLists.txt
pxr/base/vt/: CMakeLists.txt  array.h  value.cpp  value.h
pxr/imaging/garch/: CMakeLists.txt  glApi.cpp  glDebugWindow.cpp  glPlatformContext.h  glPlatformDebugContext.cpp
pxr/imaging/glf/: CMakeLists.txt
pxr/imaging/hd/: CMakeLists.txt  aov.cpp  perfLog.h  types.h
pxr/imaging/hdSt/: CMakeLists.txt  binding.h  codeGen.cpp  codeGen.h  drawBatch.cpp  materialXFilter.cpp  materialXShaderGen.cpp  mesh.cpp  meshShaderKey.cpp  meshShaderKey.h  pipelineDrawBatch.cpp  resourceBinder.cpp  resourceBinder.h
pxr/imaging/hdx/: colorCorrectionTask.cpp  colorCorrectionTask.h  oitBufferAccessor.cpp  oitRenderTask.cpp  taskController.cpp  taskController.h
pxr/imaging/hgi/: CMakeLists.txt  accelerationStructure.h  buffer.cpp  buffer.h  capabilities.h  enums.h  hgi.cpp  hgi.h  rayTracingCmds.h  resourceBindings.cpp  resourceBindings.h  shaderGenerator.h  shaderSection.cpp  shaderSection.h  tokens.h
pxr/imaging/hgiGL/: CMakeLists.txt  capabilities.cpp  capabilities.h  shaderSection.cpp  shaderSection.h
pxr/imaging/hgiInterop/: cpu.cpp  cpu.h  hgiInterop.cpp  hgiInterop.h  vulkan.cpp
pxr/imaging/hgiMetal/: CMakeLists.txt  accelerationStructure.h  accelerationStructure.mm  accelerationStructureCmds.h  accelerationStructureCmds.mm  capabilities.h  capabilities.mm  conversions.h  conversions.mm  hgi.h  hgi.mm  rayTracingCmds.h  rayTracingCmds.mm  rayTracingPipeline.h  rayTracingPipeline.mm  resourceBindings.mm  shaderFunction.mm  shaderGenerator.h  shaderGenerator.mm
pxr/imaging/hgiVulkan/: CMakeLists.txt  accelerationStructureCmds.cpp  buffer.cpp  buffer.h  capabilities.cpp  capabilities.h  commandQueue.cpp  commandQueue.h  conversions.cpp  conversions.h  device.cpp  device.h  garbageCollector.cpp  garbageCollector.h  graphicsPipeline.cpp  hgi.cpp  hgi.h  resourceBindings.cpp  resourceBindings.h  sampler.cpp  shaderCompiler.cpp  shaderFunction.cpp  shaderFunction.h  shaderGenerator.cpp  shaderGenerator.h  shaderSection.cpp  shaderSection.h  texture.cpp  texture.h
pxr/imaging/hgiWebGPU/: CMakeLists.txt  blitCmds.cpp  buffer.cpp  buffer.h  capabilities.cpp  computeCmds.cpp  computeCmds.h  conversions.cpp  debugCodes.cpp  debugCodes.h  graphicsCmds.cpp  graphicsCmds.h  graphicsPipeline.cpp  hgi.cpp  hgi.h  resourceBindings.cpp  sampler.cpp  shaderFunction.cpp
pxr/imaging/hio/: CMakeLists.txt  glslfxResourceLayout.h  plugInfo.json
pxr/usd/ndr/: declare.h
pxr/usd/sdf/: CMakeLists.txt  childrenProxy.h  (+4 more)
pxr/usdImaging/hdEmscripten/: CMakeLists.txt
usd_for_web_demos/: test.html
(+46 files in other folders)
